Final swagger complete
